# fluidpath

./: .gitignore  README  README.md  pyproject.toml
fluidpath/: __init__.py  disk_usage.py  path.py  pathtype.py  semantic_pathtype.py  size_unit_prefixes.py  usergroup.py
tests/: conftest.py  test_is_dir_file.py  test_match.py  test_pathtype.py  test_temp_files_and_dirs.py  test_wrapper.py
