[project]
name = "fluidpath"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["I001"]

[tool.ruff.isort]
known-local-folder = ["fluidpath"]
force-single-line = false
lines-after-imports = 1
force-sort-within-sections = true
order-by-type = false