[project]
name = "fluidpath"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0; python_version < '3.11'",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["I001"]

[tool.ruff.isort]
known-local-folder = ["fluidpath"]
force-single-line = false
lines-after-imports = 1
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
python_version = "3.10"
strict = true
